# snipe-it-cert-auth

./: Cargo.toml  LICENSE  README.md  default.nix  shell.nix
src/: certificate_parser.rs  main.rs  snipe_it.rs
