[package]
name = "cert-auth"
version = "0.2.0"
authors = ["Milan Pässler <me@pbb.lc>"]
edition = "2018"

[dependencies]
jsonwebtoken = "7.2"
serde_derive = "1.0"
serde = "1.0"
hyper = { version = "0.14", features = [ "server", "http1", "tcp" ] }
tokio = { version = "1.5", features = [ "rt-multi-thread", "macros" ] }
futures-util = "0.3"
custom_error = "1.9"
