[package]
name = "cert-auth"
version = "0.2.0"
authors = ["The cert-auth Authors <oss@nyantec.com>"]
edition = "2018"
license = "MirOS"

[dependencies]
jsonwebtoken = "7.2"
serde_derive = "1.0"
serde = "1.0"
hyper = { version = "0.14", features = [ "server", "http1", "tcp" ] }
tokio = { version = "1.5", features = [ "rt-multi-thread", "macros" ] }
futures-util = "0.3"
custom_error = "1.9"
x509-parser = "0.9"
urlencoding = "1.3"
der-parser = "5.1"
